# pelican-theme-webosbrew

./: .gitignore  MANIFEST.in  setup.cfg  setup.py
pelican/themes/webosbrew/: __init__.py
pelican/themes/webosbrew/static/styles/: layout.scss  main.scss  styles.scss  variables.scss
pelican/themes/webosbrew/styles/: layout.scss  main.scss  stork.css  styles.scss
pelican/themes/webosbrew/templates/: base.html  page.html  pagination.html
