[metadata]
name = pelican-theme-webosbrew
description = Pelican theme for webosbrew.org
version = 1.0.0
url = https://github.com/webosbrew/pelican-theme-webosbrew
license = Apache-2.0
author = Ningyuan Li
author_email = mariotaku.lee@gmail.com

[options]
include_package_data = True
packages = pelican

[options.package_data]
* = *.*