[metadata]
name = pelican-theme-webosbrew
description = Pelican theme for webosbrew.org
version = 1.0.5
url = https://github.com/webosbrew/pelican-theme-webosbrew
license = Apache-2.0
author = Ningyuan Li
author_email = mariotaku.lee@gmail.com

[options]
packages = pelican
include_package_data = True
install_requires =
    libsass